Added more relavent content

--- a/index.html
+++ b/index.html
@@ -79,10 +79,21 @@
   <section id="about" class="container content-section text-center">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
-        <h2>What is Cactus Hack?</h2>
-        <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-        <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-        <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+        <h2>Cactus Hack?</h2>
+        <p>Cactus Hack is a free, one day web development event that focuses on cool projects and community. You and your team (team construction is during the event) will get an afternoon to build the most awesome, mega feature-packed, Tucson-themed web app possible.  When time is up, everyone shows off their goods and we give out some awesome prizes.</p>
+        <p>All skillsets are welcome, from veteran designers and developers, to those just getting started with web development. There is literally no reason for your nerdy butt to sit at home. So come down, meet some sweet people, and have a fun time building something amazing. But don't take our word for it, see what other people are saying about their excitement for the event.</p>
+        <div class="row">
+          <blockquote class="col-lg-4">
+            This is quote one
+          </blockquote>
+          <blockquote class="col-lg-4">
+            This is quote two
+          </blockquote>
+          <blockquote class="col-lg-4">
+            This is quote three
+          </blockquote>
+        </div>
+        <p>Lunch will be provided and refreshments will be available throughout the day.</p>
       </div>
     </div>
   </section>
@@ -112,20 +123,8 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Where is it?</h2>
-        <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-        <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
-        </p>
-        <ul class="list-inline banner-social-buttons">
-          <li>
-            <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-          </li>
-          <li>
-            <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-          </li>
-          <li>
-            <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-          </li>
-        </ul>
+        <p>The wonderful peoples over at <a href="http://www.elegantthought.com/" target="_blank">Elegant Thought</a> agreed to let us host the event at their space. Its a great office and we hear there are no Sasquatches living there. Please don't ask why we care about that. Eric doesn't like to talk about it.</p>
+        <p>See map below to pin-point Elegant Thought.</p>
       </div>
     </div>
   </section>
@@ -134,8 +133,8 @@
   <div id="map"></div>
 
   <!-- Register Section -->
-  <section id="schedule" class="content-section text-center">
-    <div class="schedule-section">
+  <section id="register" class="content-section text-center">
+    <div class="register-section">
       <div class="container">
         <div class="col-lg-8 col-lg-offset-2">
           <h2>Register</h2>
