Added some background images and a few style tweaks

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 
   <!-- Custom Fonts -->
   <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-  <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,900' rel='stylesheet' type='text/css'>
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -33,7 +32,7 @@
   <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
     <div class="container">
       <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse navbar-main-collapse">
+      <div class="collapse navbar-collapse navbar-main-collapse text-center">
         <ul class="nav navbar-nav">
           <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
           <li class="hidden">
@@ -67,8 +66,9 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
-            <h1 class="brand-heading">Cactus Hack</h1>
-            <p class="intro-text">A single-day Hackaton presented by TucsonJS.<br/>June 13th, 2015</p>
+            <p>TucsonJS prsentes</p>
+            <img src="http://placehold.it/600x250"/>
+            <p class="intro-text">A single-day Hackaton coming to Tucson June 13th, 2015</p>
           </div>
         </div>
       </div>
@@ -76,7 +76,7 @@
   </header>
 
   <!-- About Section -->
-  <section id="about" class="container content-section text-center">
+  <section id="about" class="about text-center">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Cactus Hack?</h2>
@@ -99,27 +99,25 @@
   </section>
 
   <!-- Schedule Section -->
-  <section id="schedule" class="content-section text-center">
-    <div class="schedule-section">
-      <div class="container">
-        <div class="col-lg-8 col-lg-offset-2">
-          <h2>The Schedule</h2>
-          <table class="table table-hover">
-            <tr><td>9:00am</td><td>Arrival and Quick Signup</td></tr>
-            <tr><td>10:00am</td><td>Intro from Eric and Rich</td></tr>
-            <tr><td>10:30am</td><td>Group Construction</td></tr>
-            <tr><td>11:00am</td><td>Project Explanation/Brainstorming</td></tr>
-            <tr><td>11:45am</td><td>LUNCH!</td></tr>
-            <tr><td>1:00pm</td><td>Hack Time</td></tr>
-            <tr><td>5:30pm</td><td>Judging and Prizes</td></tr>
-          </table>
-        </div>
+  <section id="schedule" class="schedule content-section text-center">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2">
+        <h2>The Schedule</h2>
+        <table>
+          <tr><td>9:00am</td><td>Arrival and Quick Signup</td></tr>
+          <tr><td>10:00am</td><td>Intro from Eric and Rich</td></tr>
+          <tr><td>10:30am</td><td>Group Construction</td></tr>
+          <tr><td>11:00am</td><td>Project Explanation/Brainstorming</td></tr>
+          <tr><td>11:45am</td><td>LUNCH!</td></tr>
+          <tr><td>1:00pm</td><td>Hack Time</td></tr>
+          <tr><td>5:30pm</td><td>Judging and Prizes</td></tr>
+        </table>
       </div>
     </div>
   </section>
 
   <!-- Venue Section -->
-  <section id="venue" class="container content-section text-center">
+  <section id="venue" class="venue content-section text-center">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Where is it?</h2>
@@ -133,7 +131,7 @@
   <div id="map"></div>
 
   <!-- Register Section -->
-  <section id="register" class="content-section text-center">
+  <section id="register" class="register content-section text-center">
     <div class="register-section">
       <div class="container">
         <div class="col-lg-8 col-lg-offset-2">
