Updated the schedule section style

--- a/index.html
+++ b/index.html
@@ -103,15 +103,13 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>The Schedule</h2>
-        <table>
-          <tr><td>9:00am</td><td>Arrival and Quick Signup</td></tr>
-          <tr><td>10:00am</td><td>Intro from Eric and Rich</td></tr>
-          <tr><td>10:30am</td><td>Group Construction</td></tr>
-          <tr><td>11:00am</td><td>Project Explanation/Brainstorming</td></tr>
-          <tr><td>11:45am</td><td>LUNCH!</td></tr>
-          <tr><td>1:00pm</td><td>Hack Time</td></tr>
-          <tr><td>5:30pm</td><td>Judging and Prizes</td></tr>
-        </table>
+        <p>9:00am - Arrival and Quick Signup</p>
+        <p>10:00am - Intro from Eric and Rich</p>
+        <p>10:30am - Group Construction</p>
+        <p>11:00am - Project Explanation/Brainstorming</p>
+        <p>11:45am - LUNCH!</p>
+        <p>1:00pm - Hack Time</p>
+        <p>5:30pm - Judging and Prizes</p>
       </div>
     </div>
   </section>
