Updated the registration section and added a Tito widget

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,900' rel='stylesheet' type='text/css'>
 
+  <!-- Tito Widget -->
+  <link rel="stylesheet" type="text/css" href='https://css.tito.io/v1' />
+
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -134,7 +137,11 @@
       <div class="container">
         <div class="col-lg-8 col-lg-offset-2">
           <h2>Register</h2>
-          <p>Registration is only for bookkeeping. There is no charge for the event and we promise not to spam you.</p>
+          <p>Registration is only for bookkeeping. There is no charge for the event and we promise not to spam you or keep your information (we are happy to delete your information from Tito after the event if you like).</p>
+        </div>
+        <div class="clearfix"></div>
+        <div class="text-left">
+          <tito-widget event="tucsonjs-events/cactus-hack-2015"></tito-widget>
         </div>
       </div>
     </div>
@@ -158,6 +165,7 @@
 
   <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAuPrZ7I1_HwAkhmj2MQfjrJ-sg96q4Chs&sensor=false"></script>
+  <script src='https://js.tito.io/v1' async></script>
 
   <!-- Custom Theme JavaScript -->
   <script src="js/grayscale.js"></script>
