--- a/index.html
+++ b/index.html
@@ -87,13 +87,16 @@
         <p>All skillsets are welcome, from veteran designers and developers, to those just getting started with web development. There is literally no reason for your nerdy butt to sit at home. So come down, meet some sweet people, and have a fun time building something amazing. But don't take our word for it, see what other people are saying about their excitement for the event.</p>
         <div class="row">
           <blockquote class="col-lg-4">
-            This is quote one
+            "Best JavaScripts I've ever had."
+            <span class="author">- Charlie Sheen</span>
           </blockquote>
           <blockquote class="col-lg-4">
-            This is quote two
+            "Hackatons can be fun sometimes."
+            <span class="author">Angela Bennett</span>
           </blockquote>
           <blockquote class="col-lg-4">
-            This is quote three
+            "Eric and Richard are pretty cool dudes."
+            <span class="author">- Totally Not Richard</span>
           </blockquote>
         </div>
         <p>Lunch will be provided and refreshments will be available throughout the day.</p>
