Updated the about section again.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Cactus Hack?</h2>
         <p>Cactus Hack is a free, one day web development event that focuses on cool projects and community. You and your team (team construction is during the event) will get an afternoon to build the most awesome, mega feature-packed, Tucson-themed web app possible.  When time is up, everyone shows off their goods and we give out some awesome prizes.</p>
-        <p>All skillsets are welcome, from veteran designers and developers, to those just getting started with web development. There is literally no reason for your nerdy butt to sit at home. So come down, meet some sweet people, and have a fun time building something amazing. But don't take our word for it, see what other people are saying about their excitement for the event.</p>
+        <p>All skillsets are welcome, from veteran designers and developers, to those just getting started with web development. Also, lunch will be provided and refreshments will be available throughout the day. There is literally no reason for your nerdy butt to sit at home. So come down, meet some sweet people, and have a fun time building something amazing.</p>
         <div class="row">
           <blockquote class="col-lg-4">
             "Best JavaScripts I've ever had."
@@ -92,14 +92,13 @@
           </blockquote>
           <blockquote class="col-lg-4">
             "Hackatons can be fun sometimes."
-            <span class="author">Angela Bennett</span>
+            <span class="author">- Angela Bennett</span>
           </blockquote>
           <blockquote class="col-lg-4">
             "Eric and Richard are pretty cool dudes."
             <span class="author">- Totally Not Richard</span>
           </blockquote>
         </div>
-        <p>Lunch will be provided and refreshments will be available throughout the day.</p>
       </div>
     </div>
   </section>
