Added a Cactus Hack logo and updated the header.

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
-            <p>TucsonJS prsentes</p>
-            <img src="http://placehold.it/600x250"/>
+            <p>TucsonJS presents</p>
+            <img src="img/logo.svg"/>
             <p class="intro-text">A single-day Hackaton coming to Tucson June 13th, 2015</p>
           </div>
         </div>
