--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
-            <p>TucsonJS presents</p>
+            <p class="presents">TucsonJS presents</p>
             <img src="img/logo.svg"/>
-            <p class="intro-text">A single-day Hackaton coming to Tucson June 13th, 2015</p>
+            <p class="intro-text">A single-day Hackaton coming to Tucson July 18th, 2015</p>
           </div>
         </div>
       </div>
