Made TucsonJS link to the meetup page

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
-            <p class="presents">TucsonJS presents</p>
+            <p class="presents"><a href="http://www.meetup.com/TucsonJS/" target="_blank">TucsonJS</a> presents</p>
             <img src="img/logo.svg"/>
             <p class="intro-text">A single-day Hackaton coming to Tucson July 18th, 2015</p>
           </div>
