--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="author" content="TucsonJS">
 
   <title>Cactus Hack - Single Day Hackaton in Tucson, AZ</title>
+  <link rel="icon" type="image/png" href="img/favicon.png">
 
   <!-- Bootstrap Core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
