Updated some copy and styles

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Where is it?</h2>
-        <p>The wonderful peoples over at <a href="http://www.elegantthought.com/" target="_blank">Elegant Thought</a> agreed to let us host the event at their space. Its a great office and we hear there are no Sasquatches living there. Please don't ask why we care about that. Eric doesn't like to talk about it.</p>
-        <p>See map below to pin-point Elegant Thought.</p>
+        <p>The wonderful peoples over at <a href="http://www.elegantthought.com/" target="_blank">Elegant Thought</a> agreed to let us host the event at their space. Its a great office and we are told there are no Sasquatches living there (don't ask, Eric doesn't like to talk about it).</p>
+        <p>See the map below to pin-point Elegant Thought<br/>15 East Toole Avenue<br/>Tucson, Arizona 85701</p>
       </div>
     </div>
   </section>
@@ -146,7 +146,7 @@
       <div class="container">
         <div class="col-lg-8 col-lg-offset-2">
           <h2>Register</h2>
-          <p>Registration is only for bookkeeping. There is no charge for the event and we promise not to spam you or keep your information (we are happy to delete your information from Tito after the event if you like).</p>
+          <p>We are asking that everyone "register", which is really only for bookkeeping. There is no charge for the event and we promise not to spam you or keep your information (we are happy to delete your information from Tito after the event if you like). Just put a <code>1</code> in the ticket you want and click <code>continue</code>. We will collect a few small pieces of information and you are done.</p>
         </div>
         <div class="clearfix"></div>
         <div class="text-left">
