--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Where is it?</h2>
-        <p>The wonderful peoples over at <a href="http://www.elegantthought.com/" target="_blank">Elegant Thought</a> agreed to let us host the event at their space. Its a great office and we are told there are no Sasquatches living there (don't ask, Eric doesn't like to talk about it).</p>
+        <p>The wonderful peoples over at <a href="http://www.elegantthought.com/" target="_blank">Elegant Thought</a> agreed to let us host the event at their space. It's a great office and we are told there are no Sasquatches living there (don't ask, Eric doesn't like to talk about it).</p>
         <p>See the map below to pin-point Elegant Thought<br/>15 East Toole Avenue<br/>Tucson, Arizona 85701</p>
       </div>
     </div>
