--- a/index.html
+++ b/index.html
@@ -94,15 +94,15 @@
         <p>All skillsets are welcome, from veteran designers and developers, to those just getting started with web development. Also, lunch will be provided and refreshments will be available throughout the day. There is literally no reason for your nerdy butt to sit at home. So come down, meet some sweet people, and have a fun time building something amazing.</p>
         <div class="row">
           <blockquote class="col-lg-4">
-            "Best JavaScripts I've ever had."
+            “Best JavaScripts I’ve ever had.”
             <span class="author">- Charlie Sheen</span>
           </blockquote>
           <blockquote class="col-lg-4">
-            "Hackatons can be fun sometimes."
+            “Hackatons can be fun sometimes.”
             <span class="author">- Angela Bennett</span>
           </blockquote>
           <blockquote class="col-lg-4">
-            "Eric and Richard are pretty cool dudes."
+            “Eric and Richard are pretty cool dudes.”
             <span class="author">- Totally Not Richard</span>
           </blockquote>
         </div>
@@ -131,7 +131,7 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Where is it?</h2>
-        <p>The wonderful peoples over at <a href="http://www.elegantthought.com/" target="_blank">Elegant Thought</a> agreed to let us host the event at their space. It's a great office and we are told there are no Sasquatches living there (don't ask, Eric doesn't like to talk about it).</p>
+        <p>The wonderful peoples over at <a href="http://www.elegantthought.com/" target="_blank">Elegant Thought</a> agreed to let us host the event at their space. It’s a great office and we are told there are no Sasquatches living there (don’t ask, Eric doesn’t like to talk about it).</p>
         <p>See the map below to pin-point Elegant Thought<br/>15 East Toole Avenue<br/>Tucson, Arizona 85701</p>
       </div>
     </div>
@@ -146,7 +146,7 @@
       <div class="container">
         <div class="col-lg-8 col-lg-offset-2">
           <h2>Register</h2>
-          <p>We are asking that everyone "register", which is really only for bookkeeping. There is no charge for the event and we promise not to spam you or keep your information (we are happy to delete your information from Tito after the event if you like). Just put a <code>1</code> in the ticket you want and click <code>continue</code>. We will collect a few small pieces of information and you are done.</p>
+          <p>We are asking that everyone “register”, which is really only for bookkeeping. There is no charge for the event and we promise not to spam you or keep your information (we are happy to delete your information from Tito after the event if you like). Just put a <code>1</code> in the ticket you want and click <code>continue</code>. We will collect a few small pieces of information and you are done.</p>
         </div>
         <div class="clearfix"></div>
         <div class="text-left">
