Fix spelling of hackathon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="TucsonJS">
 
-  <title>Cactus Hack - Single Day Hackaton in Tucson, AZ</title>
+  <title>Cactus Hack - Single Day Hackathon in Tucson, AZ</title>
   <link rel="icon" type="image/png" href="img/favicon.png">
 
   <!-- Bootstrap Core CSS -->
@@ -78,7 +78,7 @@
           <div class="col-md-8 col-md-offset-2">
             <p class="presents"><a href="http://www.meetup.com/TucsonJS/" target="_blank">TucsonJS</a> presents</p>
             <img src="img/logo.svg"/>
-            <p class="intro-text">A single-day Hackaton coming to Tucson July 18th, 2015</p>
+            <p class="intro-text">A single-day Hackathon coming to Tucson July 18th, 2015</p>
           </div>
         </div>
       </div>
@@ -98,7 +98,7 @@
             <span class="author">- Charlie Sheen</span>
           </blockquote>
           <blockquote class="col-lg-4">
-            “Hackatons can be fun sometimes.”
+            “Hackathons can be fun sometimes.”
             <span class="author">- Angela Bennett</span>
           </blockquote>
           <blockquote class="col-lg-4">
