--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="TucsonJS">
 
-  <title>Cactus Hack - Single Day Hackathon in Tucson, AZ</title>
+  <title>Cactus Hack — Single Day Hackathon in Tucson, AZ</title>
   <link rel="icon" type="image/png" href="img/favicon.png">
 
   <!-- Bootstrap Core CSS -->
@@ -95,15 +95,15 @@
         <div class="row">
           <blockquote class="col-lg-4">
             “Best JavaScripts I’ve ever had.”
-            <span class="author">- Charlie Sheen</span>
+            <span class="author">— Charlie Sheen</span>
           </blockquote>
           <blockquote class="col-lg-4">
             “Hackathons can be fun sometimes.”
-            <span class="author">- Angela Bennett</span>
+            <span class="author">— Angela Bennett</span>
           </blockquote>
           <blockquote class="col-lg-4">
             “Eric and Richard are pretty cool dudes.”
-            <span class="author">- Totally Not Richard</span>
+            <span class="author">— Totally Not Richard</span>
           </blockquote>
         </div>
       </div>
