Added link to code of conduct

--- a/index.html
+++ b/index.html
@@ -158,6 +158,10 @@
         <div class="text-left">
           <tito-widget event="tucsonjs-events/cactus-hack-2015"></tito-widget>
         </div>
+        <div class="clearfix"></div>
+        <div class="col-lg-8 col-lg-offset-2">
+          <p>Before attending, please be sure to read <a href="http://coc.tucsonjs.org/">our code of conduct</a>.</p>
+        </div>
       </div>
     </div>
   </section>
