Use tucsonjs.org link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
-            <p class="presents"><a href="http://www.meetup.com/TucsonJS/" target="_blank">TucsonJS</a> presents</p>
+            <p class="presents"><a href="http://www.tucsonjs.org/" target="_blank">TucsonJS</a> presents</p>
             <img src="img/logo.svg"/>
             <p class="intro-text">A single-day Hackathon coming to Tucson July 18th, 2015</p>
           </div>
@@ -169,7 +169,7 @@
   <!-- Footer -->
   <footer>
     <div class="container text-center">
-      <p>Copyright &copy; TucsonJS 2015</p>
+      <p>Copyright &copy; <a href="http://www.tucsonjs.org/">TucsonJS</a> 2015</p>
     </div>
   </footer>
 
