--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
   <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
   <![endif]-->
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="http://cactushack.com/">
+  <meta property="og:title" content="Cactus Hack">
+  <meta property="og:description" content="Cactus Hack is a free, one day web development event that focuses on cool projects and community.">
+  <meta property="og:image" content="/fb-share-image.png">
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
