Fix Open Graph image url

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <meta property="og:url" content="http://cactushack.com/">
   <meta property="og:title" content="Cactus Hack">
   <meta property="og:description" content="Cactus Hack is a free, one day web development event that focuses on cool projects and community.">
-  <meta property="og:image" content="/fb-share-image.png">
+  <meta property="og:image" content="http://cactushack.com/fb-share-image.png">
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
